[package]
name = "rave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
cursive = { version = "0.18.0", default-features = false, features = ["crossterm-backend", "toml"] }
crossterm = "0.23.2"